--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: 'main'
 on:
   push:
   pull_request:
+  repository_dispatch:
+    types: [raptor_pub_update]
   workflow_dispatch:
     inputs:
       Release_Date:
@@ -206,6 +208,29 @@ jobs:
       run: |
         df -h
         du -sch *
+
+    - name: Add and Push
+      if: "${{ matrix.mode == 'solver' && github.event == 'repository_dispatch' }}"
+      run: |
+          git config --local user.email "pu.engineerg+nadeemyaseen@gmail.com"
+          git config --local user.name "NadeemYaseen"
+          git remote add  origin_pub  https://github.com/os-fpga/Raptor.git
+          git checkout -b pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
+          git fetch origin_pub main
+          git merge -Xtheirs origin_pub/main  -m "merging opensource Raptor main branch"
+          git push origin --set-upstream pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
+
+    - name: Create PR if solver test pass
+      if: "${{ matrix.mode == 'solver' && github.event == 'repository_dispatch' }}" 
+      run: |
+            gh pr create -B main \
+            -H pub_raptor_changes_${{ github.event.client_payload.commitSHA }}   \
+            -a NadeemYaseen -r alaindargelas  \
+            -l "opensource_Raptor_sync"  \
+            --title 'Pulling os-fpga/Raptor update till commit SHA ${{ github.event.client_payload.commitSHA }} into nuelink-semi/Raptor main.' \
+            --body 'An automated PR to check in updates from os-fpga/Raptor. See CI results at ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
 
 # Reference: https://github.com/OPM/ResInsight/blob/dev/.github/workflows/centos7.yml
   centos7-gcc:
