--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
   pull_request:
   repository_dispatch:
-    types: [raptor_pub_update]
+    types: [raptor_public_update]
   workflow_dispatch:
     inputs:
       Release_Date:
@@ -152,6 +152,17 @@ jobs:
       run: |
         make release CPU_CORES=2 test/batch_gen2
 
+    - name: Add and Push Raptor Public changes
+      if: "${{ matrix.mode == 'solver' && github.event_name == 'repository_dispatch' }}"
+      run: |
+          git config --local user.email "pu.engineerg+nadeemyaseen@gmail.com"
+          git config --local user.name "NadeemYaseen"
+          git remote add  origin_pub  https://github.com/os-fpga/Raptor.git
+          git checkout -b pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
+          git fetch origin_pub main
+          git merge -Xtheirs origin_pub/main  -m "merging opensource Raptor main branch"
+          git push origin --set-upstream pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
+
     - name: test/solver
       if: matrix.mode == 'solver'
       run: |
@@ -208,20 +219,9 @@ jobs:
       run: |
         df -h
         du -sch *
-
-    - name: Add and Push
-      if: "${{ matrix.mode == 'solver' && github.event == 'repository_dispatch' }}"
-      run: |
-          git config --local user.email "pu.engineerg+nadeemyaseen@gmail.com"
-          git config --local user.name "NadeemYaseen"
-          git remote add  origin_pub  https://github.com/os-fpga/Raptor.git
-          git checkout -b pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
-          git fetch origin_pub main
-          git merge -Xtheirs origin_pub/main  -m "merging opensource Raptor main branch"
-          git push origin --set-upstream pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
-
+        
     - name: Create PR if solver test pass
-      if: "${{ matrix.mode == 'solver' && github.event == 'repository_dispatch' }}" 
+      if: "${{ matrix.mode == 'solver' && github.event_name == 'repository_dispatch' }}" 
       run: |
             gh pr create -B main \
             -H pub_raptor_changes_${{ github.event.client_payload.commitSHA }}   \
