--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,17 +152,6 @@ jobs:
       run: |
         make release CPU_CORES=2 test/batch_gen2
 
-    - name: Add and Push Raptor Public changes
-      if: "${{ matrix.mode == 'solver' && github.event_name == 'repository_dispatch' }}"
-      run: |
-          git config --local user.email "pu.engineerg+nadeemyaseen@gmail.com"
-          git config --local user.name "NadeemYaseen"
-          git remote add  origin_pub  https://github.com/os-fpga/Raptor.git
-          git checkout -b pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
-          git fetch origin_pub main
-          git merge -Xtheirs origin_pub/main  -m "merging opensource Raptor main branch"
-          git push origin --set-upstream pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
-
     - name: test/solver
       if: matrix.mode == 'solver'
       run: |
@@ -218,19 +207,7 @@ jobs:
       if: success() || failure()
       run: |
         df -h
-        du -sch *
-        
-    - name: Create PR if solver test pass
-      if: "${{ matrix.mode == 'solver' && github.event_name == 'repository_dispatch' }}" 
-      run: |
-            gh pr create -B main \
-            -H pub_raptor_changes_${{ github.event.client_payload.commitSHA }}   \
-            -a NadeemYaseen -r alaindargelas  \
-            -l "opensource_Raptor_sync"  \
-            --title 'Pulling os-fpga/Raptor update till commit SHA ${{ github.event.client_payload.commitSHA }} into nuelink-semi/Raptor main.' \
-            --body 'An automated PR to check in updates from os-fpga/Raptor. See CI results at ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
+        du -sch *    
 
 # Reference: https://github.com/OPM/ResInsight/blob/dev/.github/workflows/centos7.yml
   centos7-gcc:
@@ -953,3 +930,101 @@ jobs:
     - name: Run clang tidy
       run: |
         ./.github/bin/run-clang-tidy.sh
+
+  BringIn_OSFPGA_Raptor:
+    if: ${{ github.event_name == 'repository_dispatch' }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: ssh-agent
+      uses: webfactory/ssh-agent@v0.7.0
+      with: 
+        ssh-private-key: |
+           ${{ secrets.SSH_PRIVATE_KEY_SELF }}
+    
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        ssh-key: ${{ secrets.SSH_PRIVATE_KEY_SELF }}
+
+    - name: Install dependencies
+      run: |
+        bash .github/workflows/install_ubuntu_dependencies_build.sh
+
+    - name: Setup Python Packages
+      run: |
+        pip3 install orderedmultidict
+        pip3 install psutil
+
+    - name: Use ccache
+      uses: hendrikmuhs/ccache-action@v1.2.3
+      with:
+        key: BringIn_OSFPGA_Raptor
+
+    - name: Configure shell
+      run: |
+        echo 'CC=gcc-11' >> $GITHUB_ENV
+        echo 'CXX=g++-11' >> $GITHUB_ENV
+        echo 'PATH=/usr/lib/ccache:'"$PATH" >> $GITHUB_ENV
+        echo 'PREFIX=/tmp/raptor_gui-install' >> $GITHUB_ENV
+        echo "$PREFIX" >> $GITHUB_PATH
+        echo "ADDITIONAL_CMAKE_OPTIONS='-DMY_CXX_WARNING_FLAGS="-W -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Werror -UNDEBUG"'" >> $GITHUB_ENV
+        echo 'RULE_MESSAGES=off' >> $GITHUB_ENV
+        echo 'LC_ALL=en_US.utf-8' >> $GITHUB_ENV
+        echo 'LANG=en_US.utf-8' >> $GITHUB_ENV
+
+    - name: Show shell configuration
+      run: |
+        env
+        which cmake && cmake --version
+        which make && make --version
+        which swig && swig -version
+        which python && python --version
+        which ninja && ninja --version
+        which tclsh && echo 'puts [info patchlevel];exit 0' | tclsh
+        which $CC && $CC --version
+        which $CXX && $CXX --version
+
+    - name: free disk space
+      run: |
+        du -sch *
+        df -h
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        docker rmi $(docker image ls -aq)
+        sudo apt-get autoremove -y >/dev/null 2>&1
+        sudo apt-get autoclean -y >/dev/null 2>&1
+        sudo rm -rf /usr/local/lib/android >/dev/null 2>&1
+        df -h
+
+    - name: Add Raptor Public changes
+      run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git remote add  origin_pub  https://github.com/os-fpga/Raptor.git
+          git checkout -b pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
+          git fetch origin_pub main
+          git merge -Xtheirs origin_pub/main  -m "merging opensource Raptor main branch"
+
+    - name: Push the changes
+      uses: ad-m/github-push-action@master
+      with:
+        branch: pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
+        ssh: true          
+
+    - name: run one test
+      run: |
+        make CPU_CORES=2 solver/tests
+    
+    - name: Create PR if test pass
+      if: "${{ matrix.mode == 'solver' && github.event_name == 'repository_dispatch' }}" 
+      run: |
+            gh pr create -B main \
+            -H pub_raptor_changes_${{ github.event.client_payload.commitSHA }}   \
+            -a NadeemYaseen -r alaindargelas  \
+            -l "opensource_Raptor_sync"  \
+            --title 'Pulling os-fpga/Raptor update till commit SHA ${{ github.event.client_payload.commitSHA }}' \
+            --body 'An automated PR to check in updates from os-fpga/Raptor. See CI results at ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
