--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -947,63 +947,13 @@ jobs:
         fetch-depth: 0
         ssh-key: ${{ secrets.SSH_PRIVATE_KEY_SELF }}
 
-    - name: Install dependencies
-      run: |
-        bash .github/workflows/install_ubuntu_dependencies_build.sh
-
-    - name: Setup Python Packages
-      run: |
-        pip3 install orderedmultidict
-        pip3 install psutil
-
-    - name: Use ccache
-      uses: hendrikmuhs/ccache-action@v1.2.3
-      with:
-        key: BringIn_OSFPGA_Raptor
-
-    - name: Configure shell
-      run: |
-        echo 'CC=gcc-11' >> $GITHUB_ENV
-        echo 'CXX=g++-11' >> $GITHUB_ENV
-        echo 'PATH=/usr/lib/ccache:'"$PATH" >> $GITHUB_ENV
-        echo 'PREFIX=/tmp/raptor_gui-install' >> $GITHUB_ENV
-        echo "$PREFIX" >> $GITHUB_PATH
-        echo "ADDITIONAL_CMAKE_OPTIONS='-DMY_CXX_WARNING_FLAGS="-W -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Werror -UNDEBUG"'" >> $GITHUB_ENV
-        echo 'RULE_MESSAGES=off' >> $GITHUB_ENV
-        echo 'LC_ALL=en_US.utf-8' >> $GITHUB_ENV
-        echo 'LANG=en_US.utf-8' >> $GITHUB_ENV
-
-    - name: Show shell configuration
-      run: |
-        env
-        which cmake && cmake --version
-        which make && make --version
-        which swig && swig -version
-        which python && python --version
-        which ninja && ninja --version
-        which tclsh && echo 'puts [info patchlevel];exit 0' | tclsh
-        which $CC && $CC --version
-        which $CXX && $CXX --version
-
-    - name: free disk space
-      run: |
-        du -sch *
-        df -h
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt clean
-        docker rmi $(docker image ls -aq)
-        sudo apt-get autoremove -y >/dev/null 2>&1
-        sudo apt-get autoclean -y >/dev/null 2>&1
-        sudo rm -rf /usr/local/lib/android >/dev/null 2>&1
-        df -h
-
     - name: Add Raptor Public changes
       run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git remote add  origin_pub  https://github.com/os-fpga/Raptor.git
           git checkout -b pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
+          git submodule update --init
           git fetch origin_pub main
           git merge -Xtheirs origin_pub/main  -m "merging opensource Raptor main branch"
 
@@ -1013,9 +963,11 @@ jobs:
         branch: pub_raptor_changes_${{ github.event.client_payload.commitSHA }}
         ssh: true          
 
-    - name: run one test
+    - name: Get the URL of pushed branch ru
       run: |
-        make CPU_CORES=2 solver/tests
+           sleep 10 
+           url=`gh run list --branch pub_raptor_changes_${{ github.event.client_payload.commitSHA }} --json workflowName,url |  jq -r '.[] | select(.workflowName == "main") | .url'`
+           echo "RUN_URL=$url" >> $GITHUB_ENV
     
     - name: Create PR if test pass
       if: "${{ matrix.mode == 'solver' && github.event_name == 'repository_dispatch' }}" 
@@ -1025,6 +977,6 @@ jobs:
             -a NadeemYaseen -r alaindargelas  \
             -l "opensource_Raptor_sync"  \
             --title 'Pulling os-fpga/Raptor update till commit SHA ${{ github.event.client_payload.commitSHA }}' \
-            --body 'An automated PR to check in updates from os-fpga/Raptor. See CI results at ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            --body 'An automated PR to check in updates from os-fpga/Raptor. See CI results at ${{ env.RUN_URL }}'
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
