--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,9 +86,9 @@ jobs:
         event_type=`echo ${{ github.event_name }}`
         if [ $event_type == 'workflow_dispatch' ]
         then
-              echo 'p_devices="${{ inputs.DEFAULT_DEVICES }}"' >> $GITHUB_ENV
+              echo 'p_devices=${{ inputs.DEFAULT_DEVICES }}' >> $GITHUB_ENV
         else
-              echo 'p_devices="$DEFAULT_DEVICES"' >> $GITHUB_ENV
+              echo 'p_devices=$DEFAULT_DEVICES' >> $GITHUB_ENV
         fi
         if [ ${{ github.repository_owner }} == 'os-fpga' ]
         then
@@ -269,9 +269,9 @@ jobs:
           event_type=`echo ${{ github.event_name }}`
           if [ $event_type == 'workflow_dispatch' ]
           then
-                echo 'p_devices="${{ inputs.DEFAULT_DEVICES }}"' >> $GITHUB_ENV
+                echo 'p_devices=${{ inputs.DEFAULT_DEVICES }}' >> $GITHUB_ENV
           else
-                echo 'p_devices="$DEFAULT_DEVICES"' >> $GITHUB_ENV
+                echo 'p_devices=$DEFAULT_DEVICES' >> $GITHUB_ENV
           fi
           if [ ${{ github.repository_owner }} == 'os-fpga' ]
           then
