--- a/.github/workflows/fetch_xml.yml
+++ b/.github/workflows/fetch_xml.yml
@@ -120,7 +120,7 @@ jobs:
                 echo "updates are from ${{ matrix.updates }}"
                 extension=tcl
                 echo "EXTENSION=$extension" >> $GITHUB_ENV
-                echo "path_to_commit=etc/**/**/*.tcl" >> $GITHUB_ENV
+                echo "path_to_commit=etc/**/**/*.tcl etc/**/**/*/*.tcl etc/**/**/*/*.json" >> $GITHUB_ENV
                 ;;
             "xml")
                 echo "updates are from ${{ matrix.updates }}"
@@ -137,7 +137,7 @@ jobs:
     - name: Check changes are related
       id: is_change
       run: |
-        any_diff=`git status --porcelain 'etc'`
+        any_diff=`git status --porcelain 'etc/*.${{ env.EXTENSION }}'`
         echo $any_diff
         if [ ! -z "$any_diff" ]
         then
