--- a/.github/workflows/fetch_xml.yml
+++ b/.github/workflows/fetch_xml.yml
@@ -141,8 +141,9 @@ jobs:
     - name: Check changes are related
       id: is_change
       run: |
-        echo ${{ env.AND_DIFF }}
-        if [ ! -z "${{ env.AND_DIFF }}" ]
+        any_diff=`echo ${{ env.AND_DIFF }}`
+        echo $any_diff
+        if [ ! -z $any_diff ]
         then
            echo "has_changed=true" >> $GITHUB_OUTPUT
         else
@@ -230,7 +231,7 @@ jobs:
         files: "${{ env.path_to_commit }}"
         target_branch: ${{ matrix.updates }}_${{ env.release_no }}
         force: true
-        access_token: ${{ github.token }}
+        access_token: ${{ secrets.OPENFPGA_CASTOR_XML_MERGE }}
 
     - name: Upload Raptor Build
       if: ${{ matrix.updates == 'xml' &&  steps.is_change.outputs.has_changed == 'true'}}
