Update main.yml to install boost in default location

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -341,8 +341,8 @@ jobs:
             yum install -y python-devel && source /opt/rh/devtoolset-11/enable            
             wget https://boostorg.jfrog.io/artifactory/main/release/1.74.0/source/boost_1_74_0.tar.gz #Licenescc_WAR
             tar -xzf boost_1_* && ls -l   #Licensecc_WAR
-            cd boost_1_* && ./bootstrap.sh &&  ./b2 install --with=all    #Licensecc_WAR   
-            cd work && make clean
+            cd boost_1_* && ./bootstrap.sh --prefix=/usr &&  ./b2 install --prefix=/usr --with=all    #Licensecc_WAR   
+            cd /work && make clean
             source /opt/rh/devtoolset-11/enable
             p_device=`cat DEFAULT_DEVICES`
             run_test=`cat TEST_ON`
