--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,9 +161,10 @@ jobs:
         #./build/bin/Flex_LM/lmutil lmhostid
         #export LM_LICENSE_FILE=${GITHUB_WORKSPACE}/.github/bin/.raptor.lic
         d_test=$(echo "${{ env.p_devices }}" | cut -d ',' -f 1)
-        ./Raptor_Tools/OpenLM/licensecc/install/bin/lccgen license issue -p projects/Raptor -f Raptor,$d_test -o build/bin/raptor.lic
+        ./Raptor_Tools/OpenLM/licensecc/install/bin/lccgen license issue -p projects/Raptor -f Raptor,DE,$d_test -o build/bin/raptor.lic
         cat build/bin/raptor.lic
         echo "the device is $d_test"
+        export LICENSE_LOCATION=${GITHUB_WORKSPACE}/build/bin/raptor.lic
         ./build/bin/raptor --batch --mute --script tests/tcl_examples/and2_verilog/run_raptor.tcl --device $d_test
 
     - name: Valgrind & Debug
@@ -353,9 +354,10 @@ jobs:
             mkdir /opt/instl_dir
             make install CPU_CORES=2 $run_test PRODUCTION_BUILD=1 PREFIX=/opt/instl_dir PRODUCTION_DEVICES=$p_device STICK_RELEASE_VERSION=$r_d
             #export LM_LICENSE_FILE=/work/.github/bin/.raptor.lic
-            ./Raptor_Tools/OpenLM/licensecc/install/bin/lccgen license issue -p projects/Raptor -f Raptor,$d_test -o build/bin/raptor.lic
+            ./Raptor_Tools/OpenLM/licensecc/install/bin/lccgen license issue -p projects/Raptor -f Raptor,DE,$d_test -o build/bin/raptor.lic
             cat build/bin/raptor.lic
             echo "the device is $d_test"
+            export LICENSE_LOCATION=${GITHUB_WORKSPACE}/build/bin/raptor.lic
             ./build/bin/raptor --batch --mute --script tests/tcl_examples/and2_verilog/run_raptor.tcl --device $d_test
             export LD_LIBRARY_PATH=/opt/instl_dir/lib64/raptor/lib:/usr/local/Qt6.2.4/lib:$LD_LIBRARY_PATH
             cd /work/Raptor_Tools/Create_Raptor_Artifact && bash create_release.sh  -C -w  /opt/instl_dir
