--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,18 +153,18 @@ jobs:
     - name: Production
       if: matrix.mode == 'production'
       run: |
-        make release CPU_CORES=2 ${{ env.run_tests }} PRODUCTION_BUILD=1 PRODUCTION_DEVICES=${{ env.p_devices }} STICK_RELEASE_VERSION=$r_d
+        make release CPU_CORES=2 ${{ env.run_tests }} PRODUCTION_BUILD=1 PRODUCTION_DEVICES=MPW1 STICK_RELEASE_VERSION=$r_d
         ./build/bin/raptor --version
         #TODO enable it again to restore license
         #./build/bin/Flex_LM/lmutil lmhostid
         #export LM_LICENSE_FILE=${GITHUB_WORKSPACE}/.github/bin/.raptor.lic
         d_test=$(echo "${{ env.p_devices }}" | cut -d ',' -f 1)
-        ./Raptor_Tools/OpenLM/licensecc/install/bin/lccgen license issue --primary-key $GITHUB_WORKSPACE/projects/Raptor/private_key.rsa -f Raptor,$d_test -o build/bin/raptor.lic
-        cat build/bin/raptor.lic
+        ./Raptor_Tools/OpenLM/licensecc/install/bin/lccgen license issue --primary-key $GITHUB_WORKSPACE/projects/Raptor/private_key.rsa -f Raptor,MPW1 -o build/bin/raptor.lic
         echo "the device is $d_test"
         export LICENSE_LOCATION=$GITHUB_WORKSPACE/build/bin/raptor.lic
         echo "license file location is $LICENSE_LOCATION"
-        ./build/bin/raptor --batch --script tests/tcl_examples/and2_verilog/run_raptor.tcl --device $d_test
+        cat $LICENSE_LOCATION
+        ./build/bin/raptor --batch --script tests/tcl_examples/and2_verilog/run_raptor.tcl --device MPW1
 
     - name: Valgrind & Debug
       if: matrix.mode == 'valgrind'
