Update CMakeLists.txt to enable the copy of production de exe

--- a/src/de/CMakeLists.txt
+++ b/src/de/CMakeLists.txt
@@ -37,8 +37,7 @@ if(USE_DE_SRC)
 	endif()
 else()
 	if(PRODUCTION_BUILD AND FLEXLM)
-       		# set(DE_EXE ${CMAKE_CURRENT_SOURCE_DIR}/src/production/de)
-		set(DE_EXE ${CMAKE_CURRENT_SOURCE_DIR}/src/eng/de) # workaround to by pass flexlm EDA-2365
+       		set(DE_EXE ${CMAKE_CURRENT_SOURCE_DIR}/src/production/de)
     	else()
         	set(DE_EXE ${CMAKE_CURRENT_SOURCE_DIR}/src/eng/de)
     	endif()
