--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -360,6 +360,7 @@ jobs:
             export LICENSE_LOCATION=${GITHUB_WORKSPACE}/build/bin/raptor.lic
             ./build/bin/raptor --batch --mute --script tests/tcl_examples/and2_verilog/run_raptor.tcl --device $d_test
             export LD_LIBRARY_PATH=/opt/instl_dir/lib64/raptor/lib:/usr/local/Qt6.2.4/lib:$LD_LIBRARY_PATH
+            strip /opt/instl_dir/bin/raptor.exe
             cd /work/Raptor_Tools/Create_Raptor_Artifact && bash create_release.sh  -C -w  /opt/instl_dir
             cat /opt/instl_dir/share/raptor/etc/device.xml
             ls -l /opt/instl_dir/share/raptor/etc/devices/*
