trun on de production exe

--- a/src/de/CMakeLists.txt
+++ b/src/de/CMakeLists.txt
@@ -36,7 +36,7 @@ if(USE_DE_SRC)
     		target_link_libraries(de PUBLIC rs_licenseManager_pic)
 	endif()
 else()
-	if(PRODUCTION_BUILD AND FLEXLM)
+	if(PRODUCTION_BUILD)
        		set(DE_EXE ${CMAKE_CURRENT_SOURCE_DIR}/src/production/de)
     	else()
         	set(DE_EXE ${CMAKE_CURRENT_SOURCE_DIR}/src/eng/de)
