--- a/.github/workflows/fetch_xml.yml
+++ b/.github/workflows/fetch_xml.yml
@@ -200,6 +200,7 @@ jobs:
       if: contains(steps.is_change.outputs.has_changed, 'true')
       run: |
           make release CPU_CORES=2
+          rm -rf RapidSilicon-SpicaProduct* sim_models blackbox_models FOEDAG_rs zephyr-rapidsi-dev tests
 
     - name: Extract device name
       id: run_tests
